# Best-Friend

./: .gitignore  LICENSE  README.md  SECURITY.md  deploy.sh  docker-compose.yml  env.example  init-db.sql  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  extensions.py  logging_config.py
app/blueprints/: admin.py  auth.py  chat.py  health.py  main.py  privacy.py  settings.py
app/models/: __init__.py  memory.py  message.py  setting.py  user.py
app/services/: __init__.py  content_filter.py  memory.py  ollama_client.py  prompts.py  security.py  stt.py  tasks.py  tts.py
app/static/css/: app.css
app/static/img/: .gitkeep
app/static/js/: app.js
app/templates/: admin.html  base.html  chat.html  onboarding.html  settings.html
app/templates/auth/: change_password.html  login.html
docker/: nginx.Dockerfile  web.Dockerfile
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  OLLAMA.md  OPENTTS.md  OPERATIONS.md  PRIVACY.md  USER_GUIDE.md
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial.py  002_rename_metadata_columns.py
nginx/: default.conf
tests/: conftest.py  test_basic.py  test_chat.py  test_ci.py  test_memory.py  test_minimal.py  test_settings.py
